2006-12-04  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_privacy: implement privacy lists (XEP-0016)
    * jsm/jsm.h: same
    * jsm/users.c: same
    * jsm/offline.c: same
    * jsm/server.c: same
    * jsm/sessions.c: same
    * jsm/modules/mod_vcard.c: same
    * jsm/modules/mod_auth_digest.c: same
    * jsm/modules/mod_xml.c: same
    * jsm/modules/mod_disco.c: same
    * jsm/modules/mod_browse.c: same
    * jsm/modules/mod_last.c: same
    * jsm/modules/mod_presence.c: same
    * jsm/modules/mod_announce.c: same
    * jsm/modules/mod_echo.c: same
    * jsm/modules/mod_roster.c: same
    * jsm/modules/mod_agents.c: same
    * jsm/modules/mod_offline.c: same
    * jsm/modules/mod_auth_crypt.c: same
    * jsm/modules/mod_auth_plain.c: same
    * jsm/modules/mod_register.c: same
    * jsm/modules/mod_version.c: same
    * jsm/modules/mod_admin.c: same
    * jsm/modules/mod_example.c: same
    * jsm/modules/mod_ping.c: same
    * jsm/modules/mod_time.c: same
    * jsm/modules.c: same
    * jsm/jsm.c: same
    * jsm/deliver.c: same
    * jsm/serialization.c: same
    * jsm/util.c: same
    * jabberd/lib/jabberdlib.h: same

2006-11-29  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_disco.c: service discovery for user JIDs, show admins
    * jsm/modules/mod_ping.c: correct ping support after jsm restart

2006-11-27  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_xml.c: removed public storage, updated private storage
    * jsm/jsm.c: same

2006-11-26  Matthias Wimmer  <m@tthias.eu>

    * jabberd/lib/jabberdlib.h: fixing typo in namespace

2006-11-23  Matthias Wimmer  <m@tthias.eu>
    * jabberd/acl.c: support to add whole domains to a ACL
    * jsm/modules/mod_disco.c: make discovery results ACL dependent
    * jsm/modules/mod_browse.c: same

2006-11-22  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_ping.c: support for XEP-0199
    * jsm/modules/mod_xml.c: do not reply to XEP-0199 get requests

2006-11-21  Matthias Wimmer  <m@tthias.eu>
